--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^2.5.0
   firebase_auth: ^4.2.6
   firebase_storage: ^11.0.11
+  cloud_firestore: ^4.4.0
 
 dev_dependencies:
   flutter_test:
