--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^4.2.6
   firebase_storage: ^11.0.11
   cloud_firestore: ^4.4.0
+  flutter_custom_clippers: ^2.1.0
 
 dev_dependencies:
   flutter_test:
