--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_storage: ^11.0.11
   cloud_firestore: ^4.4.0
   flutter_custom_clippers: ^2.1.0
+  d_chart: ^2.2.11
 
 dev_dependencies:
   flutter_test:
